<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.the.example.amorageolocater.EditDatabase">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/first_edit_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:textAlignment="center"
            android:text="@string/phone_number_title"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/second_edit_title"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/url_title"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/third_edit_title"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/latitude_title"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/fourth_edit_title"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/longitude_title"
            android:textStyle="bold"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/viewEditData_recyclerView_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="h,1:1"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp" />
    <Button
        android:id="@+id/editData_Button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editData_string"
        android:layout_marginRight="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="4dp"
        app:layout_constraintHorizontal_bias="0.977" />

</android.support.constraint.ConstraintLayout>
